--- a/assets/scss/layouts/_footer.scss
+++ b/assets/scss/layouts/_footer.scss
@@ -11,6 +11,7 @@
 .footer li {
   font-size: $font-size-sm;
   margin-bottom: 0;
+  font-family: $font-family-sans-serif!important;
 }
 li#copyright-footer {
   a {
